# DSRemote

./: .clang-format  CMakeLists.txt  about_dialog.cpp  about_dialog.h  connection.cpp  connection.h  decode_dialog.cpp  decode_dialog.h  edflib.h  global.h  interface.cpp  lan_connect_thread.cpp  lan_connect_thread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_constr.cpp  playback_dialog.cpp  playback_dialog.h  read_settings_thread.cpp  read_settings_thread.h  save_data.cpp  save_data_thread.cpp  save_data_thread.h  screen_thread.cpp  screen_thread.h  serial_decoder.cpp  settings_dialog.cpp  settings_dialog.h  signalcurve.cpp  signalcurve.h  tdial.cpp  tdial.h  timer_handlers.cpp  tled.cpp  tled.h  tmc_dev.h  tmc_lan.h  utils.c  utils.cpp  (+5 more)
